updating intro text

--- a/posts/2019-04-15-distance-sustainable-development-health/index.qmd
+++ b/posts/2019-04-15-distance-sustainable-development-health/index.qmd
@@ -18,6 +18,8 @@ draft: false # setting this to `true` will prevent your post from appearing on y
 ## Purpose
 The United Nations created the Sustainable Development Goals (SDGs) to set an ambitious global development agenda to work toward by 2030. A continental development organization in Africa asked, *how could we think about [SDG 3](https://www.globalgoals.org/goals/3-good-health-and-well-being/?gad_source=1&gclid=Cj0KCQjwwO20BhCJARIsAAnTIVSlatprBbt62rxkZomR6BOTcxeXDvYPvAkShEGVRG-_DfDC9T6Cb84aAjzqEALw_wcB) (the health goals) in a holistic and aggregate sense?*
 
+In this analysis, I explore measuring a country's distance to target achievement. I build a composite score of standardized distance to SDG 3 achievement, and find that Nigeria is furthest from achieving SDG 3 of all African countries.
+
 ## Dataset
 This analysis uses results from the International Futures global forecasting model and its **Current Path** scenario. The results span many of the measurable targets of SDG3, including:
 
