added disclaimer that more projects are coming

--- a/index.qmd
+++ b/index.qmd
@@ -21,6 +21,12 @@ On this page, I include a selection of data science and viz projects that showca
 
 Let's connect! Feel free to reach out to me on LinkedIn or send me an email.
 
+🚧 🚧 🚧
+
+I'll be adding more past projects to this site over time. To see more of my projects today, I invite you to check out my LinkedIn or Github accounts!
+
+🚧 🚧 🚧
+
 <br>
 
 **Education**
