--- a/posts/2024-07-24-chicago-employee-query-comparison/index.qmd
+++ b/posts/2024-07-24-chicago-employee-query-comparison/index.qmd
@@ -261,21 +261,52 @@ df.groupby('title').agg(
 
 # 4. Joining and Subqueries:
 
-**Retrieve the details of employees who have the same job title as the employee with the highest salary.**
+**Retrieve the details of employees who have a salary in the top five of their department. Show the name, title, department, salary, and ranking.**
 
-*Passing on question for now -- unclear*
-
-**Find the names of employees who earn more than the average salary.**
-
-```{sql sub4.1_sql, connection="con", include=FALSE, eval=FALSE}
-select *, avg(salary_annual) over(
-    order by salary_annual
-) as avg_salary
+```{sql sub4.1_sql, connection="con", include=TRUE}
+with salary_by_dept_rank as (
+select 
+    name,
+    title,
+    department,
+    salary_annual,
+    RANK() OVER(
+      partition by department
+      order by salary_annual desc) as salary_rank_by_department
 from df
-where salary_annual > avg_salary
+where department IS NOT NULL
+)
+select *
+from salary_by_dept_rank
+where salary_rank_by_department <= 5
 ```
 
 ```{r sub4.1_r, include=TRUE}
+df %>% 
+  group_by(department) %>% 
+  mutate(salary_rank = dense_rank(desc(salary_annual))) %>% 
+  arrange(department, salary_rank) %>% 
+  filter(salary_rank <= 5,
+         !is.na(department))
+```
+
+**Retrieve the details of employees who have a salary in the top five of their department. Show the name, title, department, salary, and ranking.**
+
+```{python sub4.1_python, include=FALSE}
+df['salary_rank'] = df.groupby('department')['salary_annual'].rank(method='dense', ascending=False)
+
+df[['salary_rank'] <= 5]
+```
+
+
+**Find the names of employees who earn more than the average salary in their department.**
+
+```{sql sub4.2_sql, connection="con", include=FALSE, eval=FALSE}
+select * from df
+```
+
+
+```{r sub4.2_r, include=TRUE}
 df %>% 
   mutate(avg_salary = mean(salary_annual)) %>% 
   filter(salary_annual > avg_salary)
